Reset the values if there is a quota error https://bugs.webkit.org/show_bug.cgi?id=111500

Reviewed by Beth Dakin.

* WebProcess/Storage/StorageAreaProxy.cpp:
(WebKit::StorageAreaProxy::didSetItem):
(WebKit::StorageAreaProxy::resetValues):
(WebKit):
* WebProcess/Storage/StorageAreaProxy.h:
(StorageAreaProxy):

Canonical link: https://commits.webkit.org/129872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144851 268f45cc-cd09-0410-ab3c-d52691b4dbfc